--- a/custom_addons/custom_odooship_outbound_process/wizard/custom_pack_app_wizard_view.xml
+++ b/custom_addons/custom_odooship_outbound_process/wizard/custom_pack_app_wizard_view.xml
@@ -5,17 +5,19 @@
         <field name="name">custom.pack.app.wizard.form</field>
         <field name="model">custom.pack.app.wizard</field>
         <field name="arch" type="xml">
-            <form string="Add Product Lines">
+            <form string="Add Packing Details">
                 <sheet>
                     <group>
                         <group>
                             <field name="pc_container_code_id"
                                    placeholder="Scan Container Barcode"/>
+                            <field name="pack_bench_id"/>
                             <field name="warehouse_id"/>
                             <field name="picking_id" options="{'no_open': True}"
                                    invisible="1"
                                    readonly="True"/>
-                            <field name="pack_bench_id"/>
+                            <field name="line_count" invisible="1"/>
+                            <field name="updated_line_count" invisible="1"/>
                         </group>
                         <group>
                             <field name="package_box_type_id"
@@ -34,6 +36,7 @@
                         <field name="line_ids" delete="False">
                             <tree editable="bottom">
                                 <field name="available_product_ids" column_invisible="True"/>
+                                <field name="line_added" column_invisible="True"/>
                                 <field name="product_id"
                                        options="{'no_create': True, 'no_open': True, 'no_quick_create': True, 'no_create_edit': True}"/>
                                 <field name="default_code" readonly="1"/>
@@ -42,17 +45,17 @@
                                 <field name="tenant_code_id" readonly="1"/>
                                 <field name="site_code_id" readonly="1"/>
                                 <field name="package_box_type_id" column_invisible="parent.show_package_box_in_lines == False"/>
-                                <field name="quantity"/>
+                                <field name="quantity" readonly="1"/>
                                 <field name="weight"/>
                                 <field name="available_quantity"/>
                                 <field name="remaining_quantity" column_invisible="True"/>
-                                <field name="sale_order_id" column_invisible="True"/>
                                 <field name="incoterm_location" column_invisible="True"/>
                             </tree>
                         </field>
                     </group>
                 </sheet>
                 <footer>
+<!--                    <button string="Send Payload for Line" type="object" name="button_send_payload" class="oe_highlight"/>-->
                     <button string="Pack" type="object" name="pack_products" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary" special="cancel"/>
                 </footer>
