--- a/addons/stock/views/stock_package_level_views.xml
+++ b/addons/stock/views/stock_package_level_views.xml
@@ -74,7 +74,7 @@
                 <field name="location_id" options="{'no_create': True}" column_invisible="parent.picking_type_code == 'incoming'" groups="stock.group_stock_multi_locations"/>
                 <field name="location_dest_id" options="{'no_create': True}"  column_invisible="parent.picking_type_code == 'outgoing'" groups="stock.group_stock_multi_locations"/>
                 <field name="state"/>
-                <field name="is_done" readonly="parent.state in ('draft', 'new', 'done') or is_fresh_package"/>
+                <field name="is_done" optional="hide" readonly="parent.state in ('draft', 'new', 'done') or is_fresh_package"/>
                 <button name="action_show_package_details" title="Display package content" type="object" icon="fa-list" />
             </tree>
         </field>
