[FIX] mail: message highlight improved
Previous style had the following problem:

- message content was moved up during the animation of
  message highlighted, which annoys immediate reading
  of content when scrolled to the message
- style was too soft, especially in dark theme, because
  there's only the shadow effect outside of translate
  effect, and this is dark on dark bg.

This commit solves the issue as follow:

- highlighted message is not moved at all
- bg color of highlighted message uses low opacity active color
- highlighted message has left inset border to easily spot the
  message at hand
- when highlighted message has bubble, the bubble outline is
  also colored to attract reader. Bubbles can make the highlight
  border hard to find, even with the left inset border, as replies
  to bubble also have a left-border inset.

Task-4543530

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -8,6 +8,7 @@
 
     &.o-hasSelfAvatar {
         grid-template-columns: $o-mail-Message-sidebarWidth 1fr;
+        border-left: 3px solid transparent; // align with message avatar
     }
 
     .o-mail-Composer-sidebarMain {
