--- a/addons/mail/static/src/core/common/message.dark.scss
+++ b/addons/mail/static/src/core/common/message.dark.scss
@@ -1,5 +1,9 @@
-.o-mail-Message.o-card {
-    background-color: mix($gray-100, $gray-200);
+.o-mail-Message {
+    --mail-Message-highlightBorderOpacity: 1;
+
+    &.o-card {
+        background-color: mix($gray-100, $gray-200);
+    }
 }
 
 .o-mail-Message-actions {
