[REF] *: (script) deprecate current_company_id and allowed_company_ids
This commit adapts the current code to use the new `companies`
evaluation context key, introduced in [1].

Note that, this commit is the output of the script that migrates the
code automatically.

[1]: odoo/odoo@22e9d82

part-of-task-id 4250356

--- a/addons/hr_holidays/views/hr_views.xml
+++ b/addons/hr_holidays/views/hr_views.xml
@@ -132,7 +132,7 @@
                         type="object"
                         class="oe_stat_button"
                         context="{'search_default_employee_ids': id}"
-                        invisible="not is_absent or company_id not in allowed_company_ids">
+                        invisible="not is_absent or company_id not in companies.active_ids">
                         <div invisible="hr_icon_display != 'presence_holiday_present'"
                               role="img" class="fa fa-fw fa-plane o_button_icon text-success" aria-label="Back On" title="Back On"/>
                         <div invisible="hr_icon_display != 'presence_holiday_absent'" role="img"
@@ -151,7 +151,7 @@
                         class="oe_stat_button disabled"
                         context="{'search_default_employee_ids': id}"
                         disabled="1"
-                        invisible="not is_absent or company_id in allowed_company_ids">
+                        invisible="not is_absent or company_id in companies.active_ids">
                         <div invisible="hr_icon_display != 'presence_holiday_present'"
                               role="img" class="fa fa-fw fa-plane o_button_icon text-success" aria-label="Back On" title="Back On"/>
                         <div invisible="hr_icon_display != 'presence_holiday_absent'" role="img"
@@ -169,7 +169,7 @@
                         type="object"
                         class="oe_stat_button"
                         icon="fa-calendar"
-                        invisible="not show_leaves or company_id not in allowed_company_ids"
+                        invisible="not show_leaves or company_id not in companies.active_ids"
                         context="{'search_default_employee_ids': id}"
                         groups="base.group_user"
                         help="Remaining leaves">
@@ -191,7 +191,7 @@
                         type="object"
                         class="oe_stat_button disabled"
                         icon="fa-calendar"
-                        invisible="not show_leaves or company_id in allowed_company_ids"
+                        invisible="not show_leaves or company_id in companies.active_ids"
                         context="{'search_default_employee_ids': id}"
                         disabled="1"
                         groups="base.group_user"
