--- a/addons/hr/views/hr_employee_views.xml
+++ b/addons/hr/views/hr_employee_views.xml
@@ -13,12 +13,12 @@
                         <field name="company_id" groups="base.group_multi_company" icon="fa-building" enable_counters="1"/>
                         <field name="department_id" icon="fa-users" enable_counters="1"/>
                     </searchpanel>
-                    <field name="parent_id" string="Manager" domain="[('company_id', 'in', allowed_company_ids)]"/>
+                    <field name="parent_id" string="Manager" domain="[('company_id', 'in', companies.active_ids)]"/>
                     <field name="job_id"/>
-                    <field name="coach_id" domain="[('company_id', 'in', allowed_company_ids)]"/>
+                    <field name="coach_id" domain="[('company_id', 'in', companies.active_ids)]"/>
                     <field name="category_ids" groups="hr.group_hr_user"/>
                     <field name="private_car_plate" />
-                    <field name="resource_calendar_id" domain="[('company_id', 'in', allowed_company_ids)]"/>
+                    <field name="resource_calendar_id" domain="[('company_id', 'in', companies.active_ids)]"/>
                     <field name="company_id"/>
                     <separator/>
                     <filter string="Unread Messages" name="message_needaction" domain="[('message_needaction', '=', True)]" groups="mail.group_mail_notification_type_inbox"/>
@@ -426,8 +426,8 @@
             <field name="name">Employees</field>
             <field name="path">employees</field>
             <field name="res_model">hr.employee</field>
-            <field name="domain">[('company_id', 'in', allowed_company_ids)]</field>
-            <field name="context">{'chat_icon': True, 'searchpanel_default_company_id': allowed_company_ids[0]}</field>
+            <field name="domain">[('company_id', 'in', companies.active_ids)]</field>
+            <field name="context">{'chat_icon': True, 'searchpanel_default_company_id': companies.active_id}</field>
             <field name="view_id" eval="False"/>
             <field name="search_view_id" ref="view_employee_filter"/>
             <field name="help" type="html">
