--- a/addons/hr_attendance/views/hr_attendance_view.xml
+++ b/addons/hr_attendance/views/hr_attendance_view.xml
@@ -91,7 +91,7 @@
                                     widget="many2one_avatar_employee"
                                     domain="[
                                         ('attendance_manager_id', '=', uid),
-                                        ('company_id', 'in', allowed_company_ids),
+                                        ('company_id', 'in', companies.active_ids),
                                     ]"
                                     groups="hr_attendance.group_hr_attendance_officer,!hr_attendance.group_hr_attendance_manager"/>
                                 <field
@@ -99,7 +99,7 @@
                                     name="employee_id"
                                     widget="many2one_avatar_employee"
                                     domain="[
-                                        ('company_id', 'in', allowed_company_ids),
+                                        ('company_id', 'in', companies.active_ids),
                                     ]"
                                     groups="hr_attendance.group_hr_attendance_manager"/>
                                 <field name="check_in" options="{'rounding': 0}" readonly="not is_manager"/>
