--- a/addons/hr_holidays/views/hr_leave_views.xml
+++ b/addons/hr_holidays/views/hr_leave_views.xml
@@ -585,7 +585,7 @@
         <field name="path">time-off</field>
         <field name="res_model">hr.leave</field>
         <field name="view_mode">calendar,list,form,activity</field>
-        <field name="domain">[('user_id', '=', uid), ('employee_id.company_id', 'in', allowed_company_ids)]</field>
+        <field name="domain">[('user_id', '=', uid), ('employee_id.company_id', 'in', companies.active_ids)]</field>
         <field name="context">{'short_name': 1, 'search_default_year': 1}</field>
         <field name="search_view_id" ref="hr_holidays.hr_leave_view_search_my"/>
         <field name="help" type="html">
@@ -687,7 +687,7 @@
             'search_default_current_year': 3,
             'hide_employee_name': 1,
             'holiday_status_display_name': False}</field>
-        <field name="domain">[('employee_id.company_id', 'in', allowed_company_ids)]</field>
+        <field name="domain">[('employee_id.company_id', 'in', companies.active_ids)]</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Meet the time off dashboard.
