--- a/addons/iap/views/iap_views.xml
+++ b/addons/iap/views/iap_views.xml
@@ -14,7 +14,7 @@
                             <field name="service_id" readonly="service_locked" options="{'no_open': True, 'no_create': True}"/>
                             <field name="description" />
                             <field name="company_ids" widget="many2many_tags"
-                                domain="[('id', 'in', allowed_company_ids)]" />
+                                domain="[('id', 'in', companies.active_ids)]" />
                             <field name="account_token" groups="base.group_no_one"/>
                         </group>
                         <group name="external">
