--- a/addons/mrp/views/mrp_bom_views.xml
+++ b/addons/mrp/views/mrp_bom_views.xml
@@ -237,7 +237,7 @@
             <field name="domain">[]</field> <!-- force empty -->
             <field name="view_mode">list,kanban,form</field>
             <field name="search_view_id" ref="view_mrp_bom_filter"/>
-            <field name="context">{'default_company_id': allowed_company_ids[0]}</field>
+            <field name="context">{'default_company_id': companies.active_id}</field>
             <field name="help" type="html">
               <p class="o_view_nocontent_smiling_face">
                 No bill of materials found. Let's create one!
