--- a/addons/mrp/views/stock_picking_views.xml
+++ b/addons/mrp/views/stock_picking_views.xml
@@ -196,7 +196,7 @@
         <field name="res_model">mrp.production</field>
         <field name="view_mode">list,kanban,form,calendar,activity</field>
         <field name="domain"></field>
-        <field name="context">{'default_company_id': allowed_company_ids[0]}</field>
+        <field name="context">{'default_company_id': companies.active_id}</field>
         <field name="search_view_id" ref="mrp.view_mrp_production_filter"/>
     </record>
 
