--- a/addons/stock/views/stock_lot_views.xml
+++ b/addons/stock/views/stock_lot_views.xml
@@ -129,7 +129,7 @@
                           (0, 0, {'view_mode': 'form', 'view_id': ref('view_production_lot_form')})]"/>
         <field name="search_view_id" ref="search_product_lot_filter"/>
         <field name="context">{'search_default_group_by_location': True, 'display_complete': True}</field>
-        <field name="domain">['|', ('location_id', '=', False), ('location_id.company_id', 'in', allowed_company_ids + [False])]</field>
+        <field name="domain">['|', ('location_id', '=', False), ('location_id.company_id', 'in', companies.active_ids + [False])]</field>
         <field name="help" type="html">
           <p class="o_view_nocontent_smiling_face">
             Add a lot/serial number
@@ -149,8 +149,8 @@
                           (0, 0, {'view_mode': 'list', 'view_id': ref('view_production_lot_tree')}),
                           (0, 0, {'view_mode': 'form', 'view_id': ref('view_production_lot_form')})]"/>
         <field name="search_view_id" ref="search_product_lot_filter"/>
-        <field name="context">{'search_default_group_by_product': 1, 'display_complete': True, 'default_company_id': allowed_company_ids[0]}</field>
-        <field name="domain">['|', ('location_id', '=', False), ('location_id.company_id', 'in', allowed_company_ids + [False])]</field>
+        <field name="context">{'search_default_group_by_product': 1, 'display_complete': True, 'default_company_id': companies.active_id}</field>
+        <field name="domain">['|', ('location_id', '=', False), ('location_id.company_id', 'in', companies.active_ids + [False])]</field>
         <field name="help" type="html">
           <p class="o_view_nocontent_smiling_face">
             Add a lot/serial number
