--- a/addons/stock/views/stock_picking_views.xml
+++ b/addons/stock/views/stock_picking_views.xml
@@ -399,7 +399,7 @@
             <field name="res_model">stock.picking</field>
             <field name="view_mode">list,kanban,form,calendar</field>
             <field name="domain"></field>
-            <field name="context">{'contact_display': 'partner_address', 'default_company_id': allowed_company_ids[0]}</field>
+            <field name="context">{'contact_display': 'partner_address', 'default_company_id': companies.active_id}</field>
             <field name="search_view_id" ref="view_picking_internal_search"/>
         </record>
 
