[FIX] mail: message reaction remove icon is X rather than trash
Before this commit, icon to remove a message reaction in message
reaction menu was trash rather than "X". This gave a wrong
impression that this button has more implication that it really
is.

This commit replaces it with a "X".

Also adapt slightly the style to have reduced visibility on item
hover and full visibility when the button is hovered. This makes
it more natural to click on the button.

Task-4589558

--- a/addons/mail/static/src/core/common/message_reaction_menu.scss
+++ b/addons/mail/static/src/core/common/message_reaction_menu.scss
@@ -7,15 +7,21 @@
     > .modal-body {
         padding: 0;
     }
+
+    button.oi-close {
+        aspect-ratio: 1;
+    }
 }
 
 .o-mail-MessageReactionMenu-persona:not(.o-isDeviceSmall) {
-    &:not(:hover) button.fa-trash {
+    &:not(:hover) button.oi-close {
         opacity: 0;
     }
-    &:hover button.fa-trash {
-        opacity: 100;
+    &:hover button.oi-close {
+        opacity: 50%;
+
         &:hover {
+            opacity: 100%;
             background-color: $gray-100;
         }
     }
