--- a/addons/stock_account/views/product_views.xml
+++ b/addons/stock_account/views/product_views.xml
@@ -22,7 +22,7 @@
                         <field name="property_cost_method" required="True"/>
                         <label for="property_valuation" groups="stock_account.group_stock_accounting_automatic"/>
                         <div groups="stock_account.group_stock_accounting_automatic">
-                            <field name="property_valuation" groups="account.group_account_readonly,stock.group_stock_manager"/>
+                            <field name="property_valuation" widget="radio" groups="account.group_account_readonly,stock.group_stock_manager"/>
                         </div>
                     </group>
                 </group>
