[IMP] mail: test animated highlight on bubble

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -71,6 +71,21 @@ $o-discuss-talkingColor: lighten($success, 10%);
     text-decoration: underline;
 }
 
+.o-rounded-bottom-2_5 {
+    border-bottom-left-radius: ($border-radius + $border-radius-lg) / 2;
+    border-bottom-right-radius: ($border-radius + $border-radius-lg) / 2;
+}
+
+.o-rounded-start-2_5 {
+    border-top-left-radius: ($border-radius + $border-radius-lg) / 2;
+    border-bottom-left-radius: ($border-radius + $border-radius-lg) / 2;
+}
+
+.o-rounded-end-2_5 {
+    border-top-right-radius: ($border-radius + $border-radius-lg) / 2;
+    border-bottom-right-radius: ($border-radius + $border-radius-lg) / 2;
+}
+
 .o-text-white {
     color: #FFF !important;
 }
