[IMP] base_automation: sync fields with domain
Before this commit, modifying the filter_domain of a base_automation
record was appending the domain's fields to the "When updating" trigger
fields. But when the domain removed a field, it was not removed from
the trigger fields.

This commit fixes that by adding a non stored field 'previous_domain' in
order to compare the current domain with the previous one, hence keeping
successfully track of the added/removed fields from the domain.

Task id: opw-4493054

--- a/addons/base_automation/views/base_automation_views.xml
+++ b/addons/base_automation/views/base_automation_views.xml
@@ -90,6 +90,7 @@
                                             'on_time_updated'
                                         ]"
                                 />
+                                <field name="previous_domain" invisible="1"/>
                                 <field name="filter_domain" widget="domain" groups="base.group_no_one"
                                     options="{'model': 'model_name', 'in_dialog': True}"
                                     invisible="trigger in ['on_change', 'on_webhook']"
