[IMP] point_of_sale: review
Normally in stable we cannot add field. But in this particular case
is possible because the relational table already exists from the
inverse model.

```py
printer_ids = fields.Many2many('pos.printer', 'pos_config_printer_rel',
    'config_id', 'printer_id', string='Order Printers')

pos_config_ids = fields.Many2many('pos.printer',
    'pos_config_printer_rel', 'printer_id', 'config_id') # added field
```

Normally, the new field will simply use the same table, with no need to
update it

--- a/addons/point_of_sale/views/res_config_settings_views.xml
+++ b/addons/point_of_sale/views/res_config_settings_views.xml
@@ -418,7 +418,12 @@
                                         <field name="pos_printer_ids" widget="many2many_tags"/>
                                     </div>
                                     <div>
-                                        <field name="pos_printer_ids" class="mb-0" widget="many2many_create_button_field" string="Add Printer"/>
+                                        <button name="action_pos_printer_dialog"
+                                            context="{'default_pos_config_ids': [pos_config_id]}"
+                                            icon="oi-arrow-right"
+                                            type="object"
+                                            string="Add Printer"
+                                            class="btn-link"/>
                                     </div>
                                     <div>
                                         <button name="%(point_of_sale.action_pos_printer_form)d" icon="oi-arrow-right" type="action" string="Manage Printers" class="btn-link"/>
