--- a/addons/web/static/src/webclient/actions/reports/report_tables.scss
+++ b/addons/web/static/src/webclient/actions/reports/report_tables.scss
@@ -10,6 +10,10 @@ table.table {
         text-align: left;
         vertical-align: middle;
     }
+
+    tr.o_line_section td {
+        background-color: rgba($gray-300, .5);
+    }
 }
 
 div#total {
@@ -139,15 +143,11 @@ div#total {
                 border-right: $border-width solid $gray-400;
             }
 
-            &.o_line_section td,
-            &.o_line_note td,
-            &.is-subtotal td {
+            tr.o_line_section td,
+            tr.o_line_note td,
+            tr.is-subtotal td {
                 border-top: $border-width solid $gray-700;
                 border-bottom: $border-width solid $gray-700;
-            }
-
-            &.o_line_section td {
-                background-color: rgba($gray-200, .5);
             }
 
             td.o_price_total, .o_taxes td {
