--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -1629,6 +1629,7 @@
                     <group expand="0" string="Group By">
                         <filter string="Salesperson" name="salesperson" context="{'group_by':'invoice_user_id'}"/>
                         <filter string="Partner" name="partner" context="{'group_by':'partner_id'}"/>
+                        <filter string="Partner Country" name="partner_country" context="{'group_by': 'partner_country'}"/>
                         <filter name="status" string="Status" context="{'group_by':'state'}"/>
                         <filter string="Payment Method"
                                 name="preferred_payment_method_line"
