--- a/addons/sale/views/sale_order_views.xml
+++ b/addons/sale/views/sale_order_views.xml
@@ -841,6 +841,7 @@
                     <filter string="Salesperson" name="salesperson" domain="[]" context="{'group_by': 'user_id'}"/>
                     <filter name="customer" string="Customer" domain="[]" context="{'group_by': 'partner_id'}"/>
                     <filter string="Order Date" name="order_month" domain="[]" context="{'group_by': 'date_order'}"/>
+                    <filter string="Partner Country" name="partner_country" context="{'group_by': 'partner_country'}"/>
                 </group>
             </search>
         </field>
