[IMP] hr_holidays_attendance: extra hours as allocation option
This commit adds "Based on Extra Hours" as a selection for
the field requires_allocation and removes the corresponding
boolean field.
The reason is that the option does not work when the time off type
requires allocation.

task-4317343

--- a/addons/hr_holidays_attendance/views/hr_leave_type_views.xml
+++ b/addons/hr_holidays_attendance/views/hr_leave_type_views.xml
@@ -5,9 +5,12 @@
         <field name="model">hr.leave.type</field>
         <field name="inherit_id" ref="hr_holidays.edit_holiday_status_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//group[@name='configuration']" position="inside">
-                <field name="overtime_deductible" nolabel="1"/>
-                <label for="overtime_deductible"/>
+            <xpath expr="/form/sheet/div[2]" position="before">
+                <div class="oe_inline" invisible="not warning_multiple_types_based_on_extra_hours">
+                    <div class="alert alert-danger oe_text_center" role="alert">
+                        There are multiple time off types with allocation based on extra hours.
+                    </div>
+                </div>
             </xpath>
         </field>
     </record>
