--- a/addons/hr_holidays_attendance/views/hr_leave_views.xml
+++ b/addons/hr_holidays_attendance/views/hr_leave_views.xml
@@ -11,4 +11,43 @@
             </field>
         </field>
     </record>
+
+    <record id="hr_leave_view_form_inherit" model="ir.ui.view">
+        <field name="model">hr.leave</field>
+        <field name="inherit_id" ref="hr_holidays.hr_leave_view_form" />
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='holiday_status_id']" position="replace">
+                <field name="holiday_status_id" force_save="1"
+                    invisible="employee_overtime &lt;= 0"
+                    domain="[
+                        '|',
+                        ('requires_allocation', 'in', ('extra_hours', 'no')),
+                        '&amp;',
+                            ('has_valid_allocation', '=', True),
+                            '|',
+                                ('allows_negative', '=', True),
+                                ('virtual_remaining_leaves', '&gt;', 0),
+                    ]"
+                    context="{'employee_id': employee_id, 'default_date_from': date_from, 'default_date_to': date_to}"
+                    options="{'no_create': True, 'no_open': True, 'request_type': 'leave'}"
+                    readonly="state in ['cancel', 'refuse', 'validate', 'validate1']"/>
+                <field name="holiday_status_id" force_save="1"
+                    invisible="employee_overtime &gt; 0"
+                    domain="[
+                        '|',
+                            ('requires_allocation', '=', 'no'),
+                            '&amp;',
+                                ('has_valid_allocation', '=', True),
+                                '|',
+                                    ('allows_negative', '=', True),
+                                    '&amp;',
+                                        ('virtual_remaining_leaves', '&gt;', 0),
+                                        ('allows_negative', '=', False),
+                    ]"
+                    context="{'employee_id': employee_id, 'default_date_from': date_from, 'default_date_to': date_to}"
+                    options="{'no_create': True, 'no_open': True, 'request_type': 'leave'}"
+                    readonly="state in ['cancel', 'refuse', 'validate', 'validate1']"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
