[UPDATE] #187: remove odoo on password reset notification

--- a/addons/auth_signup/views/auth_signup_templates_email.xml
+++ b/addons/auth_signup/views/auth_signup_templates_email.xml
@@ -29,7 +29,7 @@
                         <tr><td valign="top" style="font-size: 13px;">
                             <div>
                                 Dear <t t-out="object.name or ''">Marc Demo</t>,<br/><br/>
-                                A password reset was requested for the Odoo account linked to this email.
+                                A password reset was requested for the account linked to this email.
                                 You may change your password by following this link which will remain valid during 24 hours:<br/>
                                 <div style="margin: 16px 0px 16px 0px;">
                                     <a t-att-href="object.signup_url"
