--- a/addons/web/static/src/scss/utilities_custom.scss
+++ b/addons/web/static/src/scss/utilities_custom.scss
@@ -9,6 +9,8 @@ $rounded-sizes: map-merge(
         1: $border-radius-sm,
         2: $border-radius,
         3: $border-radius-lg,
+        4: $border-radius-xl,
+        5: $border-radius-xxl,
         circle: 50%,
         pill: $border-radius-pill,
     )
